# macclean

./: CONTEXT.md  Cargo.toml  LICENSE  PRODUCT.md  README.md
.claude/skills/work-issue/: SKILL.md
.github/workflows/: release.yml
docs/: CNAME  index.html  install.sh
docs/adr/: 0001-fail-safe-unclassified-default.md  0002-hybrid-reclaim-via-canonical-tool.md  0003-data-driven-ruleset.md  0004-reclaim-destination-by-class.md  0005-rust-ratatui-stack.md  0006-measure-actual-on-disk-size.md  0007-public-install-via-curl-sh.md  0008-fd-relative-scan-walker.md  0009-update-check-via-curl-releases-latest.md
docs/assets/: macclean-tui-capture.html
src/: classify.rs  dedup.rs  main.rs  model.rs  reclaim.rs  ruleset.rs  scan.rs  tui.rs  update.rs
