[package]
name = "mac-clean"
version = "0.3.0"
edition = "2021"
description = "A TUI that surfaces disk usage and classifies each item by safety class before reclaiming space."
authors = ["Tanarat <tanarats7717@gmail.com>"]
repository = "https://github.com/Ez4T/macclean"
license = "PolyForm-Noncommercial-1.0.0"
readme = "README.md"
publish = false

[[bin]]
name = "macclean"
path = "src/main.rs"

[dependencies]
# Scan
libc = "0.2"            # fd-relative openat/fstatat traversal
rayon = "1"             # parallel Scan subtrees
jwalk = "0.8"           # directory walking for Redundant Copy fingerprints
blake3 = "1"            # fast checksums for Redundant Copy detection

# Ruleset (data-driven, ADR-0003)
serde = { version = "1", features = ["derive"] }
toml = "0.8"

# Reclaim (ADR-0002, ADR-0004)
trash = "5"             # macOS Trash for the Unclassified-override path

# CLI + TUI
clap = { version = "4", features = ["derive"] }
ratatui = "0.29"
crossterm = "0.28"

# Errors
anyhow = "1"

[dev-dependencies]
tempfile = "3"        # scratch fixtures for classifier tests

[profile.release]
lto = true
strip = true
